crates/rspyts-macros/tests/ui/transparent_multi_field.stderr
error: `serde(transparent)` bridged structs must contain exactly one field
  --> tests/ui/transparent_multi_field.rs:7:31
   |
 7 |   pub struct InvalidTransparent {
   |  _______________________________^
 8 | |     pub left: u32,
 9 | |     pub right: u32,
10 | | }
   | |_^

error: #[serde(transparent)] requires struct to have at most one transparent field
  --> tests/ui/transparent_multi_field.rs:6:1
   |
 6 | / #[serde(transparent)]
 7 | | pub struct InvalidTransparent {
 8 | |     pub left: u32,
 9 | |     pub right: u32,
10 | | }
   | |_^
